--- a/notebooks/01-spark-intro.ipynb
+++ b/notebooks/01-spark-intro.ipynb
@@ -8,8 +8,40 @@
     }
    },
    "source": [
-    "# What is Spark and Why Should I Care?\n",
+    "# What is Spark and Why Should I Care?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Agenda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SWBAT:\n",
     "\n",
+    "- describe the basic structure of Spark distributed data systems."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overview of Spark"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "source": [
     "N.B. Unless otherwise marked, page references are to [Salloum, Dautov, et al., \"Big Data Analytics on Apache Spark\", 2016](https://link.springer.com/content/pdf/10.1007%2Fs41060-016-0027-9.pdf).\n",
     "\n",
     "Spark is a tool for the management of big data. Sometimes data science professionals will refer to the [five \"V\"s](https://blog.unbelievable-machine.com/en/what-is-big-data-definition-five-vs) of big data. Clearly, the availabilty and size of datasets are growing rapidly. What counts as \"big data\"? Roughly speaking, we're talking about datasets that are too large to be processed on a single machine.\n",
@@ -72,7 +104,7 @@
     }
    },
    "source": [
-    "# Spark context and concepts review\n",
+    "## Spark context and concepts review\n",
     "![sparkler](https://images.pexels.com/photos/285173/pexels-photo-285173.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260)"
    ]
   },
@@ -95,7 +127,7 @@
     }
    },
    "source": [
-    "# The story of Spark (a timeline)\n",
+    "## The story of Spark (a timeline)\n",
     "\n",
     "|<p align=\"left justify\">Date</p>|<p align=\"left justify\">Product</p>|<p align=\"left justify\">Update</p>|\n",
     "|:----|:-----|:-----|\n",
@@ -130,9 +162,7 @@
     }
    },
    "source": [
-    "# Spark data objects\n",
-    "\n",
-    "![diagram of definitions of Spark objects from databricks](https://databricks.com/wp-content/uploads/2018/05/rdd-1024x595.png)"
+    "## Spark data objects"
    ]
   },
   {
@@ -143,7 +173,7 @@
     }
    },
    "source": [
-    "## In Pyspark there are only RDD and DataFrames\n",
+    "### In Pyspark there are only RDD and DataFrames\n",
     "\n",
     "In other languages where \"compiling\" is done, there is the distinction between DataFrames and DataSet. \n",
     "\n",
@@ -158,7 +188,7 @@
     }
    },
    "source": [
-    "### Use an RDD when:\n",
+    "#### Use an RDD when:\n",
     "[quoted from databricks](https://databricks.com/blog/2016/07/14/a-tale-of-three-apache-spark-apis-rdds-dataframes-and-datasets.html)\n",
     "\n",
     "> - you want low-level transformation and actions and control on your dataset;\n",
@@ -175,7 +205,7 @@
     }
    },
    "source": [
-    "### Use a dataframe when:\n",
+    "#### Use a dataframe when:\n",
     "[also quoted from databricks](https://databricks.com/blog/2016/07/14/a-tale-of-three-apache-spark-apis-rdds-dataframes-and-datasets.html)\n",
     "\n",
     "\n",
@@ -188,10 +218,16 @@
     "\n",
     "**Note**: Machine learning algorithms are run on _DataFrames_"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
