add code for dbfs exploration

--- a/notebooks/03-spark-ml.ipynb
+++ b/notebooks/03-spark-ml.ipynb
@@ -610,6 +610,34 @@
     }
    },
    "outputs": [],
+   "source": [
+    "new = spark.read.format('csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newdf = new.load('dbfs:/databricks-datasets/COVID/IHME/2020_08_06/'\\\n",
+    "'Best_mask_hospitalization_all_locs.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newdf.toPandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
